reset invert shader on viewport resize

General problem known from bug #325154

BUG: 325154
FXED-IN: 4.11.2
REVIEW: 112877